--- a/Converter/Converter/Base.lproj/Main.storyboard
+++ b/Converter/Converter/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <action selector="convertTemp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KL7-sG-TMc"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBb-AA-Q4f">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBb-AA-Q4f">
                                 <rect key="frame" x="67" y="267" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="o3y-wT-UbB"/>
@@ -49,7 +49,7 @@
                             <constraint firstItem="DtJ-k8-h9R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="152" id="URU-dl-iXd"/>
                             <constraint firstItem="JRA-DP-UiF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="bnO-qo-9qz"/>
                             <constraint firstItem="JRA-DP-UiF" firstAttribute="centerX" secondItem="DtJ-k8-h9R" secondAttribute="centerX" id="fAV-pu-YX1"/>
-                            <constraint firstItem="VBb-AA-Q4f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="lKL-Mh-cvZ"/>
+                            <constraint firstItem="VBb-AA-Q4f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="lKL-Mh-cvZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VBb-AA-Q4f" secondAttribute="bottom" constant="439" id="xK1-qJ-pzX"/>
                         </constraints>
                     </view>
